// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display component Shows mailchimp form 1`] = `
<div>
  Loading
</div>
`;

exports[`Display component shows edit form 1`] = `
Array [
  <div
    className="caldera-field-wrapper caldera-field-wrapper-text"
  >
    <label
      className="caldera-field-label caldera-field-label-text"
      htmlFor="caldera-mc-api-key"
    >
      New API Key
       
    </label>
    <input
      className="caldera-field caldera-field-text"
      id="caldera-mc-api-key"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>,
  <button
    id="akldsajk-fsd-mc-add-api-key"
    onClick={[Function]}
    title="Save API Key"
  >
    Save API Key
  </button>,
  "0",
  <div
    className="caldera-field-wrapper caldera-field-wrapper-text"
  >
    <label
      className="caldera-field-label caldera-field-label-text"
      htmlFor="caldera-mc-select-list-akldsajk-fsd"
    >
       
    </label>
    <input
      className="caldera-field caldera-field-text"
      id="caldera-mc-select-list-akldsajk-fsd"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="111"
    />
  </div>,
]
`;

exports[`Display component shows fallback if no list id 1`] = `
<div>
  Fallback
</div>
`;
